correct letter-spacing for mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@ h1.program {
   font-size: 42px;
   font-weight: 300;
   line-height: 72px;
-  letter-spacing: 25px;
+  letter-spacing: -2px;
   margin-bottom: 36px;
 }
 
